Added autoselecting  portrait/landscape on PCL Renderer (see bug #6638) Submitted by: vicentesalvador@netscape.net (Vicente Salvador)
git-svn-id: https://svn.apache.org/repos/asf/xmlgraphics/fop/branches/fop-0_20_2-maintain@195629 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,8 @@
 ==============================================================================
 Done since 0.20.4 release
 
+- Added autoselecting  portrait/landscape on PCL Renderer (see bug #6638)
+  Submitted by: vicentesalvador@netscape.net (Vicente Salvador)
 - Improved AWT Font-measuring/rendering (see bug #14657)
   Submitted by: Ralph LaChance <Ralph_LaChance@compuserve.com>
 - Updated examples/fo files to remove all errors and warnings during build
