Updated changes for page-height="auto" bug fix.
git-svn-id: https://svn.apache.org/repos/asf/xmlgraphics/fop/branches/fop-0_20_2-maintain@195656 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,6 @@
 ==============================================================================
 Done since 0.20.4 release
+- Fixed infinite loop when page-height="auto" (Oleg Tkachenko)
 - Fix embedding of Adobe Type 1 fonts. PFB file encoded in PC format were
   not decoded prior to embedding. This may explain error messages with
   certain RIP engines. (Jeremias Maerki)
