Fixed overlaping regions.
git-svn-id: https://svn.apache.org/repos/asf/xmlgraphics/fop/branches/fop-0_20_2-maintain@195678 13f79535-47bb-0310-9956-ffa450edef68

--- a/docs/examples/fo/readme.fo
+++ b/docs/examples/fo/readme.fo
@@ -23,7 +23,7 @@ This files shows next to the trivial usage of fo:block and fo:inline examples of
                   margin-bottom="2cm" 
                   margin-left="2.5cm" 
                   margin-right="2.5cm">
-      <fo:region-body margin-top="3cm"/>
+      <fo:region-body margin-top="3cm" margin-bottom="1.5cm"/>
       <fo:region-before extent="3cm"/>
       <fo:region-after extent="1.5cm"/>
     </fo:simple-page-master>
@@ -36,7 +36,7 @@ This files shows next to the trivial usage of fo:block and fo:inline examples of
                   margin-bottom="2cm" 
                   margin-left="2.5cm" 
                   margin-right="2.5cm">
-      <fo:region-body margin-top="2.5cm"/>
+      <fo:region-body margin-top="2.5cm" margin-bottom="1.5cm"/>
       <fo:region-before extent="2.5cm"/>
       <fo:region-after extent="1.5cm"/>
     </fo:simple-page-master>
